[project]
name = "tga_data_analysis"
version = "1.0.1"
authors = [
    { name = "Matteo Pecchi"}
]
description = "Tool for automatic analysis of multiple TGA results"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

requires-python = ">=3.6"

dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "openpyxl",
    "pyarrow",
    "scipy",
    "lmfit"
]

[project.urls]
Homepage = "https://github.com/mpecchi/PyTGA"

[tool.black]
line-length = 100

