[project]
name = "tga_data_analysis"
version = "2.1.0"
authors = [
    { name = "Matteo Pecchi"}
]
description = "Tool for automatic analysis of multiple TGA results"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

requires-python = ">=3.10"

dependencies = [
    "numpy>=1.21.2",
    "pandas>=1.3.3",
    "matplotlib>=3.4.3",
    "seaborn>=0.11.2",
    "openpyxl",
    "pyarrow",
    "scipy>=1.7.1",
    "lmfit>=1.0.2",
    "myfigure>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/mpecchi/tga_data_analysis"
Documentation = "https://tga-data-analysis.readthedocs.io/en/latest/"

[tool.black]
line-length = 100

